# hartip

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  pyproject.toml  vulture_whitelist.py
.github/ISSUE_TEMPLATE/: bug_report.yml  command_request.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  dco.yml  release.yml
examples/: 01_basic_read.py  02_process_variables.py  03_device_details.py  04_multidrop_scan.py  05_device_variables.py  06_low_level_client.py  07_tls_psk_auth.py
hartip/: __init__.py  ascii.py  client.py  constants.py  device.py  exceptions.py  high_level.py  lookups.py  protocol.py  types.py  units.py  v2.py  vendors.py
tests/: test_ascii.py  test_client.py  test_constants.py  test_device.py  test_edge_cases.py  test_exceptions.py  test_issue6_device_enrichment.py  test_lookups.py  test_protocol.py  test_registry.py  test_usability.py  test_v2.py
tests/integration/: conftest.py  docker-compose.yml  run.sh  test_mock.py  test_multidrop.py  test_protocol_structs.py  test_tcp.py  test_tls.py  test_udp.py  test_v2.py
tests/integration/docker/: Dockerfile.hipserver
