[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hartip-py"
version = "0.3.0"
description = "HART-IP protocol library for Python"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "f0rw4rd"},
]
maintainers = [
    {name = "f0rw4rd"},
]
keywords = [
    "hart",
    "hart-ip",
    "industrial",
    "ics",
    "ot",
    "scada",
    "process-control",
    "fieldcomm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "construct>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "vulture>=2.11",
    "bandit>=1.7",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/f0rw4rd/hartip"
Repository = "https://github.com/f0rw4rd/hartip"
Issues = "https://github.com/f0rw4rd/hartip/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hartip*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "S", "SIM", "TC", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
    "UP006",   # keep typing.Optional etc for py310
    "UP007",   # keep Union syntax for py310
    "UP035",   # keep typing imports for py310
    "UP045",   # keep Optional for py310
    "S101",    # assert used in tests
    "S104",    # "0.0.0.0" used as dataclass default, not a bind
    "S311",    # pseudo-random not security concern here
    "RUF022",  # __all__ intentionally grouped by category
    "TC003",   # keep runtime imports simple for this library
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "S106", "S603", "S607", "SIM105", "SIM117", "C408", "B007", "RUF003", "RUF043"]
"vulture_whitelist.py" = ["B018", "E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
targets = ["hartip"]
skips = ["B101", "B104", "B311"]

[tool.vulture]
paths = ["hartip"]
min_confidence = 80
exclude = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-m 'not integration'"
markers = [
    "integration: Integration tests requiring Docker hipserver (deselected by default)",
]
